progressif/main/default/objects/RateLine__c/RateLine__c.object-meta.xml
<CustomObject>
    <label>Ligne de tarif</label>
    <nameField>
        <label>Nom de la ligne de tarif</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lignes de tarif</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>