progressif/main/default/objects/RateLine__c/fields/BroadcastSpace__c.field-meta.xml
<CustomField>
    <fullName>BroadcastSpace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Espace de diffusion</label>
    <referenceTo>BroadcastSpace__c</referenceTo>
    <relationshipLabel>Lignes de tarif</relationshipLabel>
    <relationshipName>ChildRateLine</relationshipName>
    <type>Lookup</type>
</CustomField>