progressif/main/default/objects/RateLine__c/fields/CriterionAuthorization__c.field-meta.xml
<CustomField>
    <fullName>CriterionAuthorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Critère d&#39;autorisation</label>
    <referenceTo>CriterionAuthorization__c</referenceTo>
    <relationshipLabel>Lignes de tarif</relationshipLabel>
    <relationshipName>ChildRateLine</relationshipName>
    <type>Lookup</type>
</CustomField>