progressif/main/default/objects/RateLine__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Libellé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>