progressif/main/default/objects/RateLine__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Niveau d&#39;indentation de la ligne de facturation.
Les lignes de niveau 0 ou dont le niveau n&#39;est pas renseigné ne sont pas indentées</description>
    <label>NiveauIndentation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>