progressif/main/default/objects/RateLine__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>Bonne pratique : saisissez comme ordre d&#39;affichage 10, 20 plutôt que 1, 2.</inlineHelpText>
    <label>Rang</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>