progressif/main/default/objects/RateLine__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Tarif</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Lignes de tarif</relationshipLabel>
    <relationshipName>ChildRateLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>